[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
clickhouse = { version = "0.13", features = ["inserter"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }